syntax = "proto3";

package go.micro.api.account;

service Account {
	rpc ReadUser(ReadUserRequest) returns (ReadUserResponse) {}
	rpc UpdateUser(UpdateUserRequest) returns (UpdateUserResponse) {}
	rpc DeleteUser(DeleteUserRequest) returns (DeleteUserResponse) {}
}

message User {
	string id = 1;					// uuid
	int64 created = 2;			// unix
	int64 updated = 3;			// unix
	string first_name = 4;
	string last_name = 5;
	string email = 6;
	string username = 7;		// alphanumeric user or org
}

message ReadUserRequest {}

message ReadUserResponse {
	User user = 1;
}

message UpdateUserRequest {
	User user = 1;
}

message UpdateUserResponse {
	User user = 1;
}

message DeleteUserRequest {}

message DeleteUserResponse {}
